Closed Bug 1511358 Opened 5 years ago Closed 5 years ago

Resizing doesn't work if overlapping element has z-index: -1

Categories

(Core :: Web Painting, defect, P1)

61 Branch
Unspecified
All
defect

Tracking

()

VERIFIED FIXED
mozilla67
Tracking Status
firefox-esr60 --- unaffected
firefox63 --- wontfix
firefox64 --- wontfix
firefox65 --- wontfix
firefox66 --- verified
firefox67 --- verified

People

(Reporter: esanzgar, Assigned: mattwoodrow)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3625.0 Safari/537.36

Steps to reproduce:

1. Place an element on the lower corner of a container element.
2. Give a z-index of -1





Actual results:

Resizing container element doesn't work

Example:
https://codepen.io/esanzgar/pen/vQvWpg

Other browsers work as expected.


Expected results:

The container element should be resizable.

Also notice that the color is not correct. It shouldn't be blue but purple-ish
Regression window:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=b4948416e874f6499436b15a8f52540c5754f062&tochange=c379b660d5a8c5f9cc39e5d11173b4500077ef1f

Regressed by: c379b660d5a8	Matt Woodrow — Bug 1450360 - Respect the z-index property set on scrollbars. r=mstange

@:mattwoodrow,
Your patch seems to cause the regression, can you please look into this?
Status: UNCONFIRMED → NEW
Component: Untriaged → Layout
Ever confirmed: true
Flags: needinfo?(matt.woodrow)
Keywords: regression
Product: Firefox → Core
Version: 63 Branch → 61 Branch
OS: Unspecified → All
Component: Layout → Web Painting
Too late to fix in 64. Marking this issue as fix-optional for 65; if you land a patch in nightly and think it's low-risk for beta, please request uplift.
Priority: -- → P1

This restores the previous behaviour (where a result < 0 was ignored), since using a negative value means we place our overlay scrollbar/resizer behind non-positioned content.

Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a70b3affe802
Don't include elements with z-index<0 when looking for the max z-index in a display list. r=miko
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67

Is this something we should consider for Beta backport or can it ride the trains?

Flags: needinfo?(matt.woodrow)

Comment on attachment 9044750 [details]
Bug 1511358 - Don't include elements with z-index<0 when looking for the max z-index in a display list. r?miko

Beta/Release Uplift Approval Request

  • Feature/Bug causing the regression: Bug 1450360
  • User impact if declined: Missing resizer on resizable text areas, when there's positioned content with a negative z-index value overlapping it (and no positive z-index content). Fairly rare case.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Super simple and low risk, but fixes a pretty rare case that took a while to be discovered.
  • String changes made/needed: None
Flags: needinfo?(matt.woodrow)
Attachment #9044750 - Flags: approval-mozilla-beta?

Comment on attachment 9044750 [details]
Bug 1511358 - Don't include elements with z-index<0 when looking for the max z-index in a display list. r?miko

Not a recent regression but a simple fix; let's take this for beta 12

Attachment #9044750 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Can you confirm this is fixed for you in nightly? Thanks!

Flags: needinfo?(esanzgar)
Flags: qe-verify+
Whiteboard: [qa-triaged]

Verified fixed on latest Nightly 67.0a1 (2019-02-28) (64-bit) and latest Beta 66.0b12 (64-bit)(buildID: 20190301012442) on Windows 10, Mac OS 10.14 and Ubuntu 16.04.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Flags: needinfo?(esanzgar)
Whiteboard: [qa-triaged]

(In reply to Liz Henry (:lizzard) (use needinfo) from comment #9)

Can you confirm this is fixed for you in nightly? Thanks!

I confirm it is fixed! Thank you very much!

Thanks to you too for the great bug report!

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: