Bug 1511358 - Don't include elements with z-index<0 when looking for the max z-index in a display list. r=miko a=lizzard

This restores the previous behaviour (where a result < 0 was ignored), since using a negative value means we place our overlay scrollbar/resizer behind non-positioned content.

Differential Revision: https://phabricator.services.mozilla.com/D20212